Fixed some bugs, Add some features
FIX: Fails database copy.
FIX: Some database searches are not working properly.
FIX: Cannot download the CSV file of search results.
FIX: Customize HTML preview area doesn't redraw when update button is clicked.
FIX: Column value is not displayed on the entry page if the column name is changed during database creation.
FIX: Cannot download the release files when 'Download file name' is different from 'Database name' and 'Alias name'.
FIX: Cannot download the JavaScript files uploaded by 'Upload files'.
FIX: Typo DATABASE_NAME_DEVEROPMENT -> DATABASE_NAME_DEVELOPMENT
ADD: In the database list, show databases that do not have Config permission but have Read permission.
ADD: Apply the same A tag CSS as the table page to the entry page.
ADD: GraphDB can be used as RDF store.
ADD: Show public databases on the top page.
ADD: Download ontology by http://<server_name>/ontology/<database_name>
ADD: Columns link settings (ID separator and HTML link) are applied to Entry page.
ADD: Regular expression can be used for ID separator, Improve ID separator form UI.
ADD: Apply ID separator settings when generating RDF data.
ADD: Show N/A icon if release file does not exist.

--- a/config/togodb.yml
+++ b/config/togodb.yml
@@ -4,6 +4,7 @@ default: &default
     data_import_queue: togodb_v4_di
     db_copy_queue: togodb_v4_cp
     data_release_queue: togodb_v4_re
+    new_rdf_repository_queue: togodb_v4_nr
 
   run_data_release_after_import: true
 
