--- a/.env-sample
+++ b/.env-sample
@@ -3,7 +3,7 @@ DATABASE_HOST = localhost
 DATABASE_PORT = 5432
 DATABASE_USER = togodb
 DATABASE_PASSWORD =
-DATABASE_NAME_DEVEROPMENT = togodb_development
+DATABASE_NAME_DEVELOPMENT = togodb_development
 DATABASE_NAME_TEST = togodb_test
 DATABASE_NAME_PRODUCTION = togodb_production
 
@@ -15,8 +15,12 @@ SERVER_NAME = localhost:3000
 RAPPER_PATH = /home/togodb/.local/bin/rapper
 NKF_PATH = /usr/bin/nkf
 D2RQ_DIR = /home/togodb/.local/d2rq
+PSQL_PATH = /usr/bin/psql
 
 DATA_DIR = /home/togodb/app/data
 TMP_DIR = /home/togodb/app/tmp
 
 BASE_URI_HOST = togodb.org
+
+USE_GRAPHDB = false
+GRAPHDB_SERVER = http://localhost:7200/
